@@ -28,26 +28,26 @@
     </PublishOptions>
     <RunParams>
       <local>
-        <CommandLineParams Value="-t 12 -X"/>
+        <CommandLineParams Value="-t 6 -X"/>
       </local>
       <environment>
         <UserOverrides Count="3">
           <Variable0 Name="PROMPT_AT_END" Value="YES"/>
-          <Variable1 Name="FIREBIRD" Value="/opt/firebird/4.0.2"/>
-          <Variable2 Name="LD_LIBRARY_PATH" Value="/opt/firebird/4.0.2/lib"/>
+          <Variable1 Name="FIREBIRD" Value="/opt/firebird/2.5.9"/>
+          <Variable2 Name="LD_LIBRARY_PATH" Value="/opt/firebird/2.5.9/lib"/>
         </UserOverrides>
       </environment>
       <FormatVersion Value="2"/>
       <Modes Count="1">
         <Mode0 Name="default">
           <local>
-            <CommandLineParams Value="-t 12 -X"/>
+            <CommandLineParams Value="-t 6 -X"/>
           </local>
           <environment>
             <UserOverrides Count="3">
               <Variable0 Name="PROMPT_AT_END" Value="YES"/>
-              <Variable1 Name="FIREBIRD" Value="/opt/firebird/4.0.2"/>
-              <Variable2 Name="LD_LIBRARY_PATH" Value="/opt/firebird/4.0.2/lib"/>
+              <Variable1 Name="FIREBIRD" Value="/opt/firebird/2.5.9"/>
+              <Variable2 Name="LD_LIBRARY_PATH" Value="/opt/firebird/2.5.9/lib"/>
             </UserOverrides>
           </environment>
         </Mode0>
