@@ -19,6 +19,9 @@ FBINTF Change Log  version          (1.4-2 Build 14191) Sun, 07 Jan 2024 16:15:3
 4. IBHeader (legacy interface only) Definition of Start_Transaction changed to use
    varargs - win64 compatibility issue.
 
+5. FB25Blob: last parameter of call to isc_blob_lookup_desc is now set to nil. This
+   avoids memory corruption with Firebird 4 when using the legacy interface.
+
 FBINTF Change Log  version          (1.4-1 Build 14103) Mon, 27 Nov 2023 14:26:35 +0000
 
 1. FBSQLData: ensure that TResults.getSQLData and TResults.GetData use same error
